--- a/style.css
+++ b/style.css
@@ -13,14 +13,14 @@ This theme, like WordPress, is licensed under the GPL.
 Use it to make something cool, have fun, and share what you've learned with others.
 */
 /* line 19, /Users/bobby/Documents/Source/sass/css-framework/lib/_b00-mixins.scss */
-.clearfix, #under-cover, .page-template #hero, #select-your-donation, #masthead, #main-inner, .blog #main {
+.clearfix, #under-cover, .page-template #hero, #select-your-donation, #masthead, .home #main-inner, .home #main-outer, .blog #main {
   *zoom: 1; }
   /* line 10, /Users/bobby/Documents/Source/sass/css-framework/lib/_b00-mixins.scss */
-  .clearfix:before, #under-cover:before, .page-template #hero:before, #select-your-donation:before, #masthead:before, #main-inner:before, .blog #main:before, .clearfix:after, #under-cover:after, .page-template #hero:after, #select-your-donation:after, #masthead:after, #main-inner:after, .blog #main:after {
+  .clearfix:before, #under-cover:before, .page-template #hero:before, #select-your-donation:before, #masthead:before, .home #main-inner:before, .home #main-outer:before, .blog #main:before, .clearfix:after, #under-cover:after, .page-template #hero:after, #select-your-donation:after, #masthead:after, .home #main-inner:after, .home #main-outer:after, .blog #main:after {
     display: table;
     content: ""; }
   /* line 14, /Users/bobby/Documents/Source/sass/css-framework/lib/_b00-mixins.scss */
-  .clearfix:after, #under-cover:after, .page-template #hero:after, #select-your-donation:after, #masthead:after, #main-inner:after, .blog #main:after {
+  .clearfix:after, #under-cover:after, .page-template #hero:after, #select-your-donation:after, #masthead:after, .home #main-inner:after, .home #main-outer:after, .blog #main:after {
     clear: both; }
 
 /* line 160, /Users/bobby/Documents/Source/sass/css-framework/lib/_b00-mixins.scss */
@@ -1557,8 +1557,8 @@ footer {
     text-align: center; }
 
 /* line 422, /Users/bobby/Documents/Source/wordpress/themes/heritageaction/sass/partials/_styles.scss */
-.home #main {
-  background: #f3f3f3 url("img/bg-capital-left.jpg") left center no-repeat; }
+.home #main-outer {
+  background: #f3f3f3 url("img/bg-capital-left.jpg") left bottom no-repeat; }
 /* line 425, /Users/bobby/Documents/Source/wordpress/themes/heritageaction/sass/partials/_styles.scss */
 .home #black-bg {
   width: 100%;
@@ -2430,11 +2430,7 @@ input[type="checkbox"] {
   z-index: 1000;
   position: relative; }
 
-/* line 38, /Users/bobby/Documents/Source/wordpress/themes/heritageaction/sass/partials/_layout.scss */
-.home #main-inner {
-  margin-bottom: 80px; }
-
-/* line 42, /Users/bobby/Documents/Source/wordpress/themes/heritageaction/sass/partials/_layout.scss */
+/* line 36, /Users/bobby/Documents/Source/wordpress/themes/heritageaction/sass/partials/_layout.scss */
 .row {
   display: block;
   width: 102.77778%;
@@ -2448,10 +2444,10 @@ input[type="checkbox"] {
   .row:after {
     clear: both; }
 
-/* line 50, /Users/bobby/Documents/Source/wordpress/themes/heritageaction/sass/partials/_layout.scss */
+/* line 44, /Users/bobby/Documents/Source/wordpress/themes/heritageaction/sass/partials/_layout.scss */
 .home #hero {
   margin-right: -5%; }
-/* line 53, /Users/bobby/Documents/Source/wordpress/themes/heritageaction/sass/partials/_layout.scss */
+/* line 47, /Users/bobby/Documents/Source/wordpress/themes/heritageaction/sass/partials/_layout.scss */
 .home #content {
   display: block;
   width: 104.16667%;
@@ -2464,18 +2460,21 @@ input[type="checkbox"] {
   /* line 31, /Users/bobby/Documents/Source/sass/css-framework/lib/_b00-grid.scss */
   .home #content:after {
     clear: both; }
-  /* line 55, /Users/bobby/Documents/Source/wordpress/themes/heritageaction/sass/partials/_layout.scss */
+  /* line 49, /Users/bobby/Documents/Source/wordpress/themes/heritageaction/sass/partials/_layout.scss */
   .home #content .col1, .home #content .col2 {
     display: inline;
     float: left;
     width: 45.83333%;
     margin: 0 2.08333%; }
-/* line 59, /Users/bobby/Documents/Source/wordpress/themes/heritageaction/sass/partials/_layout.scss */
+/* line 53, /Users/bobby/Documents/Source/wordpress/themes/heritageaction/sass/partials/_layout.scss */
 .home #main {
   padding-top: 25px;
   position: relative; }
+/* line 57, /Users/bobby/Documents/Source/wordpress/themes/heritageaction/sass/partials/_layout.scss */
+.home #main-inner {
+  padding-bottom: 80px; }
 
-/* line 77, /Users/bobby/Documents/Source/wordpress/themes/heritageaction/sass/partials/_layout.scss */
+/* line 78, /Users/bobby/Documents/Source/wordpress/themes/heritageaction/sass/partials/_layout.scss */
 .page #main {
   padding-top: 0; }
 
